# sgm-aws

./: README.md  auth.ts  compose.yaml  dev.docker-compose.yaml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  prestart.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/routes/: login.py  upload.py  user.py
backend/app/core/: __init__.py  config.py  crud.py  db.py  models.py  s3.py  security.py
frontend/: .eslintrc.json  Dockerfile  README.md  auth.ts  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/prisma/: dev.db
frontend/src/: App.vue  main.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: app-sidebar.tsx  error-card.tsx  nav-user.tsx
frontend/src/contexts/: context-user.tsx  getServerSideProps.tsx
frontend/src/lib/: axios.ts
frontend/src/router/: router.ts  validations.ts
frontend/src/store/: authentication.ts  vuex.ts
frontend/src/utils/: DataParse.ts  ParseImageToBase64.ts
frontend2/: .dockerignore  .eslintrc.json  .prettierrc  Dockerfile  Dockerfile.dev  README.md  nginx.frontend.conf  package-lock.json  package.json  tsconfig.app.json
frontend2/src/: main.ts
frontend2/src/interfaces/: IUserData.ts
frontend2/src/router/: router.ts  validations.ts
frontend2/src/services/: AuthService.ts  AxiosInstance.ts
frontend2/src/store/: authentication.ts
prisma/: dev.db  schema.prisma
src/app/: globals.css  page.tsx
src/app/(pages)/: layout.tsx  (+1 more)
src/components/: app-sidebar.tsx  nav-main.tsx  nav-user.tsx
(+35 files in other folders)
